# P12

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: best_linear_regression.joblib
notebooks/: dataexpo_p12.ipynb
tests/: test_api.py
