[project]
name = "projetagritech"
version = "0.1.0"
description = ""
authors = [
    {name = "Yacine Ould",email = "yacineouldabdel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "graphql-core (==3.2.7)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
